# MySeniorValet

./: .env.example  .gitignore  .replit  ADMIN_SETUP_INSTRUCTIONS.md  AI_DIAGNOSIS_REPORT.md  AI_ENRICHMENT_ENHANCEMENT_REPORT.md  AI_MAP_INTELLIGENCE_TEST_REPORT.md  API_COST_CRISIS_ROOT_CAUSE_ANALYSIS.md  API_COST_PROTECTION_ENHANCED_2025.md  API_COST_PROTECTION_IMPLEMENTATION_SUMMARY.md  API_ENDPOINT_DOCUMENTATION_2025.md  ARIZONA_EXPANSION_SUCCESS_REPORT.md  AUSTRALIAN_EXPANSION_COMPLETION_GUIDE.md  AUTHENTICATION_FIXED_REPORT.md  AUTHENTICATION_SETUP_GUIDE.md  AUTOMATED_TESTING_REPORT.md  AUTOMATED_TESTING_REPORT_07_28_2025.md  BILINGUAL_ENHANCEMENT_REPORT.md  BUSINESS_FUNCTIONALITY_VERIFICATION_AUGUST_19_2025.md  BUSINESS_METRICS_DASHBOARD.md  CACHE_TEST_REPORT.md  CALIFORNIA_DATA_ACQUISITION_SUCCESS.md  CALIFORNIA_EXPANSION_COMPLETION_REPORT.md  CANADIAN_EXPANSION_REPORT.md  CANADIAN_EXPANSION_SUCCESS_REPORT.md  CAPABILITY_ANALYSIS.md  CHATGPT_CODE_REVIEW_PACKAGE.md  CHATGPT_INCIDENT_REVIEW.md  CHATGPT_SUMMARY.md  CODEBASE_ANALYSIS_SPRINT_1_TO_2.md  CODEBASE_EXPORT_FOR_CHATGPT.md  CODEBASE_EXPORT_FOR_REVIEW.md  CODEBASE_REVIEW_FOR_CHATGPT.md  COMMUNITY_QUALITY_TEST_2025-08-27.json  COMPLETE_CAPABILITY_ANALYSIS.md  COMPLETE_CODEBASE_ANALYSIS.md  COMPLETE_CODEBASE_ANALYSIS_FOR_AI_EVALUATION.md  COMPLETE_CODEBASE_EXPORT_FOR_AI_EVALUATION.md  COMPLETE_PLATFORM_TOOLS_OVERVIEW.md  COMPREHENSIVE_API_SECURITY_REPORT.md  (+1054 more)
.agents/: agent_assets_metadata.toml
client/: index.html  vite.config.ts
docs/: DATABASE_ENHANCEMENT_PHASE_1.md  DATABASE_ENHANCEMENT_PHASE_2.md  (+7 more)
(+1590 files in other folders)
