[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.118.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "lxml>=6.0.0",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "uvicorn>=0.37.0",
]
